# igraphpp

./: CMakeLists.txt  README.rst
etc/cmake/: FindIgraph.cmake  Findigraph.cmake
include/igraph/cpp/: analysis.h  attributes.h  bfs.h  centrality.h  edge.h  edge_iterator.h  edge_selector.h  generators.h  graph.h  io.h  isomorphism.h  matching.h  matrix.h  ptr_vector.h  str_vector.h  types.h  vector.h  vector_bool.h  vector_int.h  vector_long.h  vertex.h  vertex_selector.h  visitors.h
include/igraph/cpp/analysis/: components.h  non_simple.h
include/igraph/cpp/generators/: degree_sequence.h  erdos_renyi.h  famous.h  full.h  grg.h  lattice.h  line_graph.h  ring.h
include/igraph/cpp/io/: edgelist.h  gml.h  graphml.h  leda.h  lgl.h  ncol.h
include/igraph/cpp/util/: allocation_guard.h
include/igraph/cpp/visitors/: bfs.h
src/: CMakeLists.txt  attributes.cpp  centrality.cpp  edge.cpp  graph.cpp  isomorphism.cpp  matching.cpp  vector_bool.cpp  vector_int.cpp  vertex.cpp  vertex_selector.cpp
src/analysis/: components.cpp  non_simple.cpp
src/generators/: degree_sequence.cpp  erdos_renyi.cpp  famous.cpp  full.cpp  grg.cpp  lattice.cpp  line_graph.cpp  ring.cpp
src/io/: edgelist.cpp  gml.cpp  graphml.cpp  leda.cpp  lgl.cpp  ncol.cpp
src/visitors/: bfs.cpp
